Criação tabela alimento e grupo

--- a/CRUD_WCF_REST_JSON/Web.config
+++ b/CRUD_WCF_REST_JSON/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -19,15 +19,17 @@
     </services>
     <behaviors>
       <endpointBehaviors>
-        <behavior>
-          <webHttp/>
+        <behavior name="">
+          <webHttp />
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="CRUD_WCF_REST_JSON_Behavior">
-          <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
+          <serviceDebug includeExceptionDetailInFaults="false" />
+        </behavior>
+        <behavior name="">
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
