--- a/CRUD_WCF_REST_JSON/CRUD_WCF_REST_JSON.csproj
+++ b/CRUD_WCF_REST_JSON/CRUD_WCF_REST_JSON.csproj
@@ -72,10 +72,22 @@
     <Content Include="App_Data\mydemo_log.ldf">
       <DependentUpon>mydemo.mdf</DependentUpon>
     </Content>
+    <Content Include="ServiceAlimento.svc" />
     <Content Include="ServiceProduct.svc" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alimento.cs" />
+    <Compile Include="AlimentoEntidade.cs">
+      <DependentUpon>ModelMyDemo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Grupo.cs" />
+    <Compile Include="GrupoEntidade.cs">
+      <DependentUpon>ModelMyDemo.tt</DependentUpon>
+    </Compile>
+    <Compile Include="IServiceAlimento.cs" />
     <Compile Include="IServiceProduct.cs" />
     <Compile Include="ModelMyDemo.Context.cs">
       <AutoGen>True</AutoGen>
@@ -97,6 +109,9 @@
       <DependentUpon>ModelMyDemo.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceAlimento.svc.cs">
+      <DependentUpon>ServiceAlimento.svc</DependentUpon>
+    </Compile>
     <Compile Include="ServiceProduct.svc.cs">
       <DependentUpon>ServiceProduct.svc</DependentUpon>
     </Compile>
