Alteração web.config para setar o service

--- a/CRUD_WCF_REST_JSON/Web.config
+++ b/CRUD_WCF_REST_JSON/Web.config
@@ -13,8 +13,8 @@
   </system.web>
   <system.serviceModel>
     <services>
-      <service name="CRUD_WCF_REST_JSON.ServiceProduct" behaviorConfiguration="CRUD_WCF_REST_JSON_Behavior">
-        <endpoint address="" binding="webHttpBinding" contract="CRUD_WCF_REST_JSON.IServiceProduct"></endpoint>
+      <service name="CRUD_WCF_REST_JSON.ServiceAlimento" behaviorConfiguration="CRUD_WCF_REST_JSON_Behavior">
+        <endpoint address="" binding="webHttpBinding" contract="CRUD_WCF_REST_JSON.IServiceAlimento"></endpoint>
       </service>
     </services>
     <behaviors>
